# lightning-image-classifier

./: .gitignore  README.md  pyproject.toml
src/: build_table.py  data.py
